[package]
name = "libsettings"
version = "0.1.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"

[dependencies]
libsettings-sys = { path = "./libsettings-sys" }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
once_cell = "1"
parking_lot = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dependencies.sbp]
git = "https://github.com/swift-nav/libsbp.git"
rev = "a14a85123ac4e4a3b8830388cac72bc926799d17"
features = ["link"]

[dev-dependencies]
mockstream = { git = "https://github.com/lazy-bitfield/rust-mockstream", rev = "0.0.4" }
