[package]
name = "sbp-settings"
version = "0.1.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
description = "SwiftNav settings API library"
repository = "https://github.com/swift-nav/libsettings"
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
sbp-settings-sys = { version = "0.1.0", path = "./sbp-settings-sys" }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
log = "0.4"
once_cell = "1"
parking_lot = "0.11"
sbp = { version = "3.4.11-beta", features = ["link"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
mockstream = { git = "https://github.com/lazy-bitfield/rust-mockstream", rev = "0.0.4" }
