[package]
name = "libsettings"
version = "0.1.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"

[dependencies]
libsettings-sys = { path = "../libsettings-sys" }
libc = "0.2"
log = "0.4.14"
lazy_static = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[dev-dependencies]
mockstream = { git = "https://github.com/lazy-bitfield/rust-mockstream", rev = "0.0.4" }
sbp = { git = "https://github.com/swift-nav/libsbp.git", rev = "ce5e3d14ae4284c53982bc3fd79a2fa15976ff9f", features = [] }
