[package]
name = "sbp-settings-sys"
version = "0.1.0"
authors = ["Swift Navigation <dev@swift-nav.com>"]
edition = "2018"
description = "FFI bindings for SwiftNav's settings library"
repository = "https://github.com/swift-nav/libsettings"
license-file = "../../LICENSE"
readme = "../../README.md"

[dependencies]

[build-dependencies]
cmake = "0.1.45"
bindgen = "0.59"
